--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,64 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
+# Node dependencies
+/node_modules/
+.pnpm/
+.pnp*
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
-
-# next.js
+# Build output
 /.next/
-/out/
+.out/
+/build/
+/dist/
 
-# production
-/build
+# Test coverage
+/coverage/
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# vercel
-.vercel
+# OS metadata
+.DS_Store
+Thumbs.db
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
 
-.genkit/*
-.env*
+# Env files (local secrets)
+.env
+.env.*       # e.g., .env.production, .env.local, etc.
+.gcloud-key.json  # 🔐 important to exclude this!
 
-# firebase
+# Prisma generated files (optional, if using auto-generation)
+/prisma/dev.db
+/prisma/migrations/
+
+# Vercel & Netlify
+.vercel/
+.netlify/
+
+# Firebase
 firebase-debug.log
 firestore-debug.log
+
+# Genkit
+.genkit/
+
+# SSH keys or private certs
+*.pem
+*.key
+*.crt
+*.csr
+
+# Misc
+.idea/
+.vscode/
+*.swp
+*.swo
